--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -78,6 +78,7 @@
             line-height: line-height
             overflow: hidden
             height: 4 * line-height
+            text-align: justify
     &:hover
         .thumbnail
             .thumbnail-image
@@ -148,6 +149,7 @@
     line-height: line-height
     p, table
         margin: line-height 0
+        text-align: justify
     h1, h2, h3, h4, h5, h6
         font-weight: 600
     h1, h2, h3, h4, h5, h6
