--- a/layout/common/head.ejs
+++ b/layout/common/head.ejs
@@ -2,6 +2,13 @@
 <html lang="<%= page.lang %>">
 <head>
     <meta charset="utf-8">
+    <% if (page.lang === 'ja') { %>
+        <meta name="description" content="つきえ（月へ）・　つきえスタジオのブログ。内容は主に日常生活、技術（ほとんどはIT系、情報技術）、旅行（ほとんどの記事は日本国内について）、エンタテーメント（アニメ、ゲームのレビュー）等。">
+    <% } else if (page.lang === 'vi') { %>
+        <meta name="description" content="Tsukie - Blog của Tsukie studio. Nội dung của blog về cuộc sống hàng ngày, về công nghệ (chủ yếu về công nghệ phần mềm, IT), du lịch (hầu hết về Nhật Bản), giải trí (anime, hoạt hình, game...).">
+    <% } else { %>
+        <meta name="description" content="Tsukie - Blog from Tsukie studio. Written articles about lifestyles, technologies (mostly software programming related), travel (contents mostly Japan related), entertainment (anime, game, etc).">
+    <% } %>
     <%
         var title = page.title;
         if (is_archive()) {
