uppercase category text

--- a/source/css/_partial/nav.styl
+++ b/source/css/_partial/nav.styl
@@ -60,6 +60,7 @@ $nav-link
                             background: rgba(0,0,0,0.1)
                 .main-nav-list-link
                     @extend $nav-link
+                    text-transform: capitalize
                     line-height: 20px
                     padding: 15px 14px
                     font-size: 16px
