--- a/layout/share/default.ejs
+++ b/layout/share/default.ejs
@@ -7,7 +7,7 @@
             e.stopPropagation();
 
             var $this = $(this),
-                url = $this.attr('data-url'),
+                url = $this.attr('data-url').slice(0, -1),
                 encodedUrl = encodeURIComponent(url),
                 id = 'article-share-box-' + $this.attr('data-id'),
                 offset = $this.offset(),
