fix language link rendering in header

--- a/layout/common/header.ejs
+++ b/layout/common/header.ejs
@@ -19,14 +19,26 @@
                             <% for (var i in theme.menu) {
                                     if (i == 'Categories') { %>
                                         <% for (link in theme.menu[i][page.lang]) { %>
-                                            <li class="main-nav-list-item">
-                                                <a class="main-nav-list-link" href="<%- url_for('categories/' + link).replace('../', '') %>"><%= theme.menu[i][page.lang][link] %></a>
-                                            </li>
+                                            <% if (page.lang === "en") { %>
+                                                <li class="main-nav-list-item">
+                                                    <a class="main-nav-list-link" href="<%- url_for('categories/' + link) %>"><%= theme.menu[i][page.lang][link] %></a>
+                                                </li>
+                                            <% } else { %>
+                                                <li class="main-nav-list-item">
+                                                    <a class="main-nav-list-link" href="<%- url_for('categories/' + link).replace('../', '') %>"><%= theme.menu[i][page.lang][link] %></a>
+                                                </li>
+                                            <% } %>
                                         <% } %>
                                     <% } else { %>
-                                <li class="main-nav-list-item" >
-                                    <a class="main-nav-list-link" href="<%- url_for(theme.menu[i]).replace('../', '') %>"><%= __('index.' + i.toLowerCase()) %></a>
-                                </li>
+                                        <% if (page.lang === "en") { %>
+                                            <li class="main-nav-list-item" >
+                                                <a class="main-nav-list-link" href="<%- url_for(theme.menu[i]) %>"><%= __('index.' + i.toLowerCase()) %></a>
+                                            </li>
+                                        <% } else { %>
+                                            <li class="main-nav-list-item" >
+                                                <a class="main-nav-list-link" href="<%- url_for(theme.menu[i]).replace('../', '') %>"><%= __('index.' + i.toLowerCase()) %></a>
+                                            </li>
+                                        <% } %>
                             <% }} %>
                         </ul>
                         <nav id="sub-nav">
