remove archive, remove next/prev post, localize category in summary, minor change to font

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -74,7 +74,7 @@
         .article-excerpt
             position: relative
             color: rgb(170, 170, 170)
-            font-size: 16px
+            font-size: 14px
             line-height: line-height
             overflow: hidden
             height: 4 * line-height
@@ -147,6 +147,8 @@
     font-size: font-size-article
     font-weight: 300
     line-height: line-height
+    p
+        font-size 95%
     p, table
         margin: line-height 0
         text-align: justify
