--- a/layout/common/summary.ejs
+++ b/layout/common/summary.ejs
@@ -5,19 +5,30 @@
         <% } %>
         <div class="article-meta">
             <div class="category">
-            <%- list_categories(post.categories, {
-                depth:2,
-                style: 'none',
-                show_count: false,
-                class: 'article-category',
-                separator: '<i class="icon fa fa-angle-right"></i>',
-            }) %>
+                <% if (page.lang === "en") { %>
+                    <%- list_categories(post.categories, {
+                        depth:2,
+                        style: 'none',
+                        show_count: false,
+                        class: 'article-category',
+                        separator: '<i class="icon fa fa-angle-right"></i>',
+                    }) %>
+                <% } else { %>
+                    <% for (var i in post.categories.data) { %>
+                        <% console.log(post.categories.data[0].path) %>
+                        <a class="article-category-link" href="<%- url_for(post.categories.data[i].path).replace('../', '') %>"><%= theme.menu["Categories"][post.lang][post.categories.data[i].slug] %></a>
+                    <% } %>
+                <% } %>
             </div>
             <div class="date"><time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date) %></time></div>
         </div>
         <%- partial('post/title', { class_name: 'article-title', linkable: true }) %>
         <p class="article-excerpt">
-            <%- excerpt(post) %>
+            <% if (post.summary) { %>
+                <%= post.summary %>
+            <% } else { %>
+                <%- excerpt(post) %>
+            <% } %>
         </p>
     </div>
 </article>
