--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -27,7 +27,7 @@ color-footer-background = #33363b
 background-texture = url("images/body-texture.jpg")
 
 // Fonts
-font-sans = "Titillium Web", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif
+font-sans = "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif
 font-serif = Georgia, "Times New Roman", serif
 font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon-profile-size = 24px
