--- a/layout/common/footer.ejs
+++ b/layout/common/footer.ejs
@@ -3,10 +3,8 @@
         <div class="container-inner">
             <a id="back-to-top" href="javascript:;"><i class="icon fa fa-angle-up"></i></a>
             <div class="credit">
-                <h1 class="logo-wrap">
-                    <a href="<%- url_for() %>" class="logo"></a>
-                </h1>
                 <p>Copyright © <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %></p>
+                <p>Built by Hexo. Theme from PPOfice. Customized by Tsukie Studio.</p>
             </div>
         </div>
     </div>
