--- a/source/css/_partial/assets.styl
+++ b/source/css/_partial/assets.styl
@@ -4,3 +4,17 @@ i.icon
     text-align: center
     &:before
         transition: 0.2s ease-in
+
+.post-tag
+    border solid
+    border-color #006bde
+    border-width 1px
+    border-radius 5px
+    margin 3px
+    padding 3px
+    white-space nowrap
+
+    a
+        color #777
+    a:hover
+        color #000000
