--- a/layout/widget/tag.ejs
+++ b/layout/widget/tag.ejs
@@ -1,8 +1,18 @@
 <% if (site.tags.length) { %>
-    <div class="widget-wrap widget-list">
-        <h3 class="widget-title"><%= __('sidebar.tags') %></h3>
-        <div class="widget">
-            <%- list_tags() %>
-        </div>
+<div class="widget-wrap">
+    <h3 class="widget-title"><%= __('sidebar.tags') %></h3>
+    <div class="widget" style="line-height: 2.2em">
+        <% var dict = theme.tag[page.lang] %>
+        <% for (var link in dict) { %>
+            <span class="post-tag">
+                <i class="fa fa-tag"></i>
+                <% if (page.lang === "en") { %>
+                    <a href="<%- url_for("tags/" + link) %>"><%= dict[link] %></a>
+                <% } else { %>
+                    <a href="<%- url_for("tags/" + link).replace('../', '') %>"><%= dict[link] %></a>
+                <% } %>
+            </span>
+        <% } %>
     </div>
+</div>
 <% } %>
