implement anti copy function

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,5 +1,5 @@
 <%- partial('common/head') %>
-<body>
+<body ondragstart="return false;" ondrop="return false;" oncontextmenu="return false;">
     <div id="wrap">
         <%- partial('common/header', null, {cache: !config.relative_link}) %>
         <div class="container container-body-part">
