--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -144,6 +144,10 @@
     line-height: line-height
     p
         font-size 95%
+        -webkit-user-select: none;
+        -moz-user-select: -moz-none;
+        -ms-user-select: none;
+        user-select: none;
     p, table
         margin: line-height 0
         text-align: justify
