add localized link, add tag in summaries

--- a/layout/common/header.ejs
+++ b/layout/common/header.ejs
@@ -46,7 +46,11 @@
                             <% }} %>
                         </ul>
                         <nav id="sub-nav">
-
+                            <ul id="main-nav">
+                                <li class="main-nav-list-item"><a href="/" class="main-nav-list-link">English</a></li>
+                                <li class="main-nav-list-item"><a href="/vi/" class="main-nav-list-link">Tiếng Việt</a></li>
+                                <li class="main-nav-list-item"><a href="/ja/" class="main-nav-list-link">日本語</a></li>
+                            </ul>
                         </nav>
                     </div>
                 </div>
