--- a/source/css/_partial/assets.styl
+++ b/source/css/_partial/assets.styl
@@ -19,3 +19,17 @@ i.icon
         color #777
     a:hover
         color #000000
+        
+.post-tag-summary
+    border solid
+    border-color #006bde
+    border-width 1px
+    border-radius 5px
+    padding 3px
+    white-space nowrap
+    text-transform lowercase
+
+    a
+        color #777
+    a:hover
+        color #000000
