--- a/layout/widget/recent_posts.ejs
+++ b/layout/widget/recent_posts.ejs
@@ -14,7 +14,21 @@
                         </div>
                         <% } %>
                         <div class="item-inner">
-                            <p class="item-category"><%- list_categories(post.categories, {show_count: false, depth:2, class: 'article-category', style: 'none', separator: '<i class="icon fa fa-angle-right"></i>'}) %></p>
+                            <p class="item-category">
+                                <% if (page.lang === "en") { %>
+                                    <%- list_categories(post.categories, {
+                                        depth:2,
+                                        style: 'none',
+                                        show_count: false,
+                                        class: 'article-category',
+                                        separator: '<i class="icon fa fa-angle-right"></i>',
+                                    }) %>
+                                <% } else { %>
+                                    <% for (var i in post.categories.data) { %>
+                                        <a class="article-category-link" href="<%- url_for(post.categories.data[i].path).replace('../', '') %>"><%= theme.menu["Categories"][post.lang][post.categories.data[i].slug] %></a>
+                                    <% } %>
+                                <% } %>
+                            </p>
                             <p class="item-title"><a href="<%- url_for((post.link?post.link:post.path)) %>" class="title"><%= post.title %></a></p>
                             <p class="item-date"><time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date) %></time></p>
                         </div>
