--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -29,6 +29,10 @@
     padding: 10px
     margin-bottom: 15px
 
+.article-tag-summary
+    margin 0 0 7px 0
+    color #777
+
 .archive-article-title
     text-decoration: none
     font-weight: bold
