--- a/source/css/_partial/nav.styl
+++ b/source/css/_partial/nav.styl
@@ -13,7 +13,7 @@ $nav-link
 .nav-container
     clearfix()
     padding: 0 15px
-    background: rgba(36,52,105,0.7)
+    background: rgba(66, 70, 81, 0.7)
     z-index: 1
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.05),
                             0 -1px 0 rgba(0,0,0,0.2),
