--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -41,7 +41,13 @@ code
     padding: 0 container-padding
 
 .container-body-part
-    background-image background-texture
+    background:
+    radial-gradient(black 15%, transparent 16%) 0 0,
+    radial-gradient(black 15%, transparent 16%) 8px 8px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+    background-color:#282828;
+    background-size:16px 16px;
 
 .container-inner
     clearfix()
