tweak theme and image

--- a/layout/common/content-title.ejs
+++ b/layout/common/content-title.ejs
@@ -37,7 +37,8 @@
         %>
         <%- title %>
 
-        <br>Language: <ul style="position: relative; display: inline-block;">
+        <br>
+        <ul style="position: relative; display: inline-block;">
             <li style="display: inline-block;"><a href="/">English</a></li>・
             <li style="display: inline-block;"><a href="/vi/">Tiếng Việt</a></li>・
             <li style="display: inline-block;"><a href="/ja/">日本語</a></li>
