--- a/layout/share/default.ejs
+++ b/layout/share/default.ejs
@@ -23,7 +23,7 @@
             } else {
                 var html = [
                     '<div id="' + id + '" class="article-share-box">',
-                        '<input class="article-share-input" value="' + url + '">',
+                        '<input class="article-share-input" value="' + url + "/index.html" + '">',
                         '<div class="article-share-links">',
                             '<a href="https://twitter.com/intent/tweet?url=' + encodedUrl + '" class="article-share-twitter" target="_blank" title="Twitter"></a>',
                             '<a href="https://www.facebook.com/sharer.php?u=' + encodedUrl + '" class="article-share-facebook" target="_blank" title="Facebook"></a>',
