--- a/layout/common/head.ejs
+++ b/layout/common/head.ejs
@@ -28,7 +28,7 @@
 
         var headTitle = "";
         if (page.lang === "ja") {
-            headTitle = "つきへ・全ては人生の元に"
+            headTitle = "つきへ・夢は常に続く"
         } else {
             headTitle = config.title;
         }
