--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,5 +1,13 @@
 <%- partial('common/head') %>
 <body ondragstart="return false;" ondrop="return false;" oncontextmenu="return false;">
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12&appId=153050218821313&autoLogAppEvents=1';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
     <div id="wrap">
         <%- partial('common/header', null, {cache: !config.relative_link}) %>
         <div class="container container-body-part">
