--- a/layout/common/article.ejs
+++ b/layout/common/article.ejs
@@ -16,7 +16,7 @@
             <%- post.content %>
         </div>
         <footer class="article-footer">
-            <div class="fb-like" data-href="<%= post.permalink + "/index.html" %>" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true" style="padding: 0 0 0 40%"></div>
+            <div class="fb-like" data-href="<%= post.permalink + "index.html" %>" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true" style="padding: 0 0 0 40%"></div>
         </footer>
     </div>
 </article>
