temporarily turned off anti copy function

--- a/layout/common/head.ejs
+++ b/layout/common/head.ejs
@@ -28,7 +28,7 @@
 
         var headTitle = "";
         if (page.lang === "ja") {
-            headTitle = "つきへ・夢は常に続く"
+            headTitle = "つきへ・人生、技術、旅行…そして、色々"
         } else {
             headTitle = config.title;
         }
