--- a/layout/common/scripts.ejs
+++ b/layout/common/scripts.ejs
@@ -3,6 +3,6 @@
 
 <!-- Custom Scripts -->
 <%- js('js/main') %>
-<%- js('js/anticopy') %>
+<!--<%- js('js/anticopy') %>-->
 <%- js('js/facebook') %>
 <%- js('js/twitter') %>
