--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -22,10 +22,10 @@ body
     background: color-background
     font: font-size font-sans
     -webkit-text-size-adjust: 100%
-    -webkit-user-select: none;
-    -moz-user-select: -moz-none;
-    -ms-user-select: none;
-    user-select: none;
+    //-webkit-user-select: none;
+    //-moz-user-select: -moz-none;
+    //-ms-user-select: none;
+    //user-select: none;
 
 code
     margin: 0 2px
