--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,5 +1,6 @@
 <%- partial('common/head') %>
-<body ondragstart="return false;" ondrop="return false;" oncontextmenu="return false;">
+<!--<body ondragstart="return false;" ondrop="return false;" oncontextmenu="return false;">-->
+<body>
     <div id="fb-root"></div>
     <div id="wrap">
         <%- partial('common/header', null, {cache: !config.relative_link}) %>
