--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -144,10 +144,10 @@
     line-height: line-height
     p
         font-size 95%
-        -webkit-user-select: none;
-        -moz-user-select: -moz-none;
-        -ms-user-select: none;
-        user-select: none;
+        //-webkit-user-select: none;
+        //-moz-user-select: -moz-none;
+        //-ms-user-select: none;
+        //user-select: none;
     p, table
         margin: line-height 0
         text-align: justify
@@ -222,7 +222,7 @@
             margin-right: 0.5em
             margin-left: 1em
     .caption
-        color: color-grey
+        color: color-black
         display: block
         font-size: 0.9em
         margin-top: 0.5em
