--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -24,7 +24,7 @@ color-sidebar-text-dark = #444
 color-footer-background = #33363b
 
 // Fonts
-font-sans = "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif
+font-sans = "Helvetica", Arial, "Microsoft Yahei", sans-serif
 font-serif = Georgia, "Times New Roman", serif
 font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon-profile-size = 24px
