--- a/layout/common/archive.ejs
+++ b/layout/common/archive.ejs
@@ -1,4 +1,5 @@
 <% var last; %>
+<% var postCount; %>
 <% page.posts.each(function(post) { %>
     <% if (page.lang === post.lang) { %>
         <% var year = post.date.year(); %>
