--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -269,9 +269,11 @@
         padding-top: 1.1em
         padding-bottom: 1.1em
     li
+        padding-bottom: 2em
+    a
         font-weight: bold
         font-size: 20px
-        padding-bottom: 2em
+        text-decoration none
         &:hover
             color: #007bff
 
