change navigation bar titles, etc

--- a/layout/common/footer.ejs
+++ b/layout/common/footer.ejs
@@ -4,6 +4,7 @@
             <a id="back-to-top" href="javascript:;"><i class="icon fa fa-angle-up"></i></a>
             <div class="credit">
                 <p>Copyright © <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %></p>
+                <div><a href="terms-and-conditions.html">Terms and conditions</a> <a href="privacy-policy.html">Privacy policy</a></div>
             </div>
         </div>
     </div>
