add google ad unit

--- a/layout/common/head.ejs
+++ b/layout/common/head.ejs
@@ -81,5 +81,6 @@
             google_ad_client: "ca-pub-3728474335881495",
             enable_page_level_ads: true
         });
+        googletag.pubads().collapseEmptyDivs(true);
     </script>
 </head>
