--- a/layout/common/sidebar.ejs
+++ b/layout/common/sidebar.ejs
@@ -1,6 +1,17 @@
 <aside id="sidebar">
     <a class="sidebar-toggle" title="Expand Sidebar"><i class="toggle icon"></i></a>
     <div class="widgets-container">
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- recent content ad -->
+		<ins class="adsbygoogle"
+		     style="display:block"
+		     data-ad-client="ca-pub-3728474335881495"
+		     data-ad-slot="4325813506"
+		     data-ad-format="auto"
+		     data-full-width-responsive="true"></ins>
+		<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
         <% if (theme.widgets) { %>
             <% theme.widgets.forEach(function(widget) { %>
                 <%- partial('widget/' + widget) %>
