--- a/layout/common/archive.ejs
+++ b/layout/common/archive.ejs
@@ -32,5 +32,16 @@
     <nav id="page-nav">
         <span class="pages"><%= _p('nav.current_page', page.current) %><%= _p('nav.total_page', page.total) %></span>
         <%- paginator({prev_text: '&laquo;', next_text: '&raquo;'}) %>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- recent content ad -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-3728474335881495"
+             data-ad-slot="4325813506"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </nav>
 <% } %>
