--- a/layout/common/article.ejs
+++ b/layout/common/article.ejs
@@ -21,6 +21,17 @@
             <br><h1>Related articles</h1>
             <% //console.log(popular_posts_json({maxCount: 3}, post)); %>
             <%- htmlGenerator(popular_posts_json({maxCount: 3}, post)) %>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- recent content ad -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-3728474335881495"
+                 data-ad-slot="4325813506"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </footer>
     </div>
 </article>
