--- a/layout/common/content-title.ejs
+++ b/layout/common/content-title.ejs
@@ -44,4 +44,15 @@
             <li style="display: inline-block;"><a href="/ja/">日本語</a></li>
         </ul>
     </h1>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- recent content ad -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-3728474335881495"
+         data-ad-slot="4325813506"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </div>
