--- a/layout/common/sidebar.ejs
+++ b/layout/common/sidebar.ejs
@@ -17,5 +17,15 @@
                 <%- partial('widget/' + widget) %>
             <% }) %>
         <% } %>
+        <!-- recent content ad -->
+		<ins class="adsbygoogle"
+		     style="display:block"
+		     data-ad-client="ca-pub-3728474335881495"
+		     data-ad-slot="4325813506"
+		     data-ad-format="auto"
+		     data-full-width-responsive="true"></ins>
+		<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
     </div>
 </aside>
