add anti adblock

--- a/layout/common/scripts.ejs
+++ b/layout/common/scripts.ejs
@@ -4,5 +4,7 @@
 <!-- Custom Scripts -->
 <%- js('js/main') %>
 <%- //js('js/anticopy') %>
+<%- js('js/ads') %>
 <%- js('js/facebook') %>
 <%- js('js/twitter') %>
+<%- js('js/guarder') %>
