add anti adblock

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -4,14 +4,14 @@
     <div id="fb-root"></div>
     <div id="wrap">
         <%- partial('common/header', null, {cache: !config.relative_link}) %>
-        <noscript>
-                <p>Please enable Javascript or the website cannot function normally.</p>
-                <p>Hãy kích hoạt Javascript. Website không hoạt động được nếu không có Javascript.</p>
-                <p>Javascriptが無効になっている限りサイトが正常に動けません。Javascriptを有効にしてください。</p>
-        </noscript>
-        <div id="will-show" class="container container-body-part no-show-if-js-disabled">
+        <div id="will-show" class="container container-body-part">
             <div class="main-body container-inner">
                 <div class="main-body-inner">
+                    <noscript>
+                        <h2 style="font-size: 2em">Please enable Javascript or the website cannot function normally.</h2><br>
+                        <h2 style="font-size: 2em">Hãy kích hoạt Javascript. Website không hoạt động được nếu không có Javascript.</h2><br>
+                        <h2 style="font-size: 2em">Javascriptが無効になっている限りサイトが正常に動けません。Javascriptを有効にしてください。</h2>
+                    </noscript>
                     <section id="main">
                         <%- partial('common/content-title') %>
                         <div class="main-body-content">
