--- a/layout/common/article.ejs
+++ b/layout/common/article.ejs
@@ -1,5 +1,5 @@
 <article id="<%= post.layout %>-<%= post.slug %>" class="article article-single article-type-<%= post.layout %><%= (post.direction && post.direction.toLowerCase() === 'rtl' ? ' rtl' : '') %>" itemscope itemprop="blogPost">
-    <div class="article-inner">
+    <div class="article-inner no-show-if-js-disabled">
         <% if (post.link || post.title) { %>
             <header class="article-header">
                 <%- partial('post/title', { class_name: 'article-title' }) %>
