--- a/layout/common/header.ejs
+++ b/layout/common/header.ejs
@@ -1,4 +1,4 @@
-<header id="header" class="no-show-if-js-disabled">
+<header id="header">
     <div id="header-outer" class="outer">
         <div class="container">
             <div class="container-inner">
