--- a/layout/widget/recent_posts.ejs
+++ b/layout/widget/recent_posts.ejs
@@ -1,5 +1,5 @@
 <% if (site.posts.length) { %>
-    <div class="widget-wrap">
+    <div class="widget-wrap no-show-if-js-disabled">
         <h3 class="widget-title"><%= __('sidebar.recents') %></h3>
         <div class="widget">
             <ul id="recent-post" class="<%= (theme.customize.thumbnail?'':'no-thumbnail') %>">
