--- a/layout/widget/tag.ejs
+++ b/layout/widget/tag.ejs
@@ -1,5 +1,5 @@
 <% if (site.tags.length) { %>
-<div class="widget-wrap">
+<div class="widget-wrap no-show-if-js-disabled">
     <h3 class="widget-title"><%= __('sidebar.tags') %></h3>
     <div class="widget" style="line-height: 2.2em">
         <% var dict = theme.tag[page.lang] %>
