--- a/layout/common/summary.ejs
+++ b/layout/common/summary.ejs
@@ -1,5 +1,5 @@
 <article class="article article-summary<%= (post.direction && post.direction.toLowerCase() === 'rtl' ? ' rtl' : '') %>">
-    <div class="article-summary-inner no-show-if-js-disabled">
+    <div class="article-summary-inner">
         <% if (theme.customize.thumbnail === true) { %>
         <%- partial('common/thumbnail', { counter: true }) %>
         <% } %>
