add mechanism against js blocking

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -9,7 +9,7 @@
     </noscript>
     <div id="wrap">
         <%- partial('common/header', null, {cache: !config.relative_link}) %>
-        <div class="container container-body-part">
+        <div class="container container-body-part no-show-if-js-disabled">
             <div class="main-body container-inner">
                 <div class="main-body-inner">
                     <section id="main">
