add ads below title

--- a/layout/common/article.ejs
+++ b/layout/common/article.ejs
@@ -5,6 +5,17 @@
                 <%- partial('post/title', { class_name: 'article-title' }) %>
             </header>
         <% } %>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- recent content ad -->
+        <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-3728474335881495"
+                 data-ad-slot="4325813506"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
         <% if (post.layout != 'page') { %>
             <div class="article-meta">
                 <%- partial('post/date', { class_name: 'article-date', date_format: null }) %>
