--- a/layout/common/footer.ejs
+++ b/layout/common/footer.ejs
@@ -11,6 +11,7 @@
                 		<a href="<%- url_for('terms-and-conditions.html').replace('../', '') %>">Terms and conditions</a> <a href="<%- url_for('privacy-policy.html').replace('../', '') %>">Privacy policy</a>
                 	<% } %>
         		</div>
+                <a href="//www.dmca.com/Protection/Status.aspx?ID=a11237fc-e69c-44c0-a6e0-f2215f37f4e5" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w100-2x1-01.png?ID=a11237fc-e69c-44c0-a6e0-f2215f37f4e5"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
             </div>
         </div>
     </div>
