readd dmca validation, change generate related post logic

--- a/layout/common/article.ejs
+++ b/layout/common/article.ejs
@@ -30,8 +30,7 @@
             <div class="fb-like" data-href="<%= post.permalink + "index.html" %>" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true" style="padding: 0 0 0 30%"></div>
             <a class="twitter-share-button" href="https://twitter.com/intent/tweet"></a>
             <br><h1>Related articles</h1>
-            <% //console.log(popular_posts_json({maxCount: 3}, post)); %>
-            <%- htmlGenerator(popular_posts_json({maxCount: 5}, post)) %>
+            <%- htmlGenerator(popular_posts_json({maxCount: 7, PPMixingRate: 0.5}, post)) %>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- recent content ad -->
             <ins class="adsbygoogle"
