--- a/layout/common/head.ejs
+++ b/layout/common/head.ejs
@@ -11,6 +11,7 @@
         gtag('config', 'UA-112909631-1');
     </script>
     <meta name='dmca-site-verification' content='MVdTdXREM0xYd0pvcDZtaGY3UGI0dz090' />
+    <meta name="yandex-verification" content="4e69908ab9398b77" />
     <meta charset="utf-8">
     <% if (is_post()) { %>
         <meta name="description" content="<%= page.summary %>">
